Fix: lambda function (index.js) to write to dynamo
Co-authored-by: Avery Littlemore <avery.d.littlemore@gmail.com>
Co-authored-by: Austin Nelson <nelsonaustin11@gmail.com>
Co-authored-by: Dylan Spyer <dylanspyer@gmail.com>
Co-authored-by: Will Conrad <w.conrad@outlook.com>

--- a/lambda/package.json
+++ b/lambda/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.609.0",
     "@aws-sdk/lib-dynamodb": "^3.610.0",
+    "aws-sdk": "^2.1656.0",
     "dynamoose": "^2.8.1"
   }
 }
