Feature: Added functionality that will archive old message data into an s3 bucket
Co-authored-by: Avery Littlemore <avery.d.littlemore@gmail.com>
Co-authored-by: Austin Nelson <nelsonaustin11@gmail.com>
Co-authored-by: Dylan Spyer <dylanspyer@gmail.com>
Co-authored-by: Will Conrad <w.conrad@outlook.com>

--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aws-sdk": "^2.1659.0",
     "dynamoose": "^4.0.1",
     "uuid": "^10.0.0"
   }
