Build: Attempt to work with emitter and lambda
Co-authored-by: Dylan Spyer <dylanspyer@users.noreply.github.com>
Co-authored-by: Austin Nelson <nelsonaustin11@gmail.com>

--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@socket.io/redis-emitter": "^5.1.0",
     "aws-sdk": "^2.1659.0",
     "dynamoose": "^4.0.1",
+    "redis": "^4.6.15",
     "uuid": "^10.0.0"
   }
 }
