Refactor: Refactored and added .env variables for CLI deployment
Co-authored-by: Avery Littlemore <avery.d.littlemore@gmail.com>
Co-authored-by: Austin Nelson <nelsonaustin11@gmail.com>
Co-authored-by: Dylan Spyer <dylanspyer@gmail.com>
Co-authored-by: Will Conrad <w.conrad@outlook.com>

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@socket.io/redis-emitter": "^5.1.0",
     "aws-cdk-lib": "2.147.2",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
     "dynamoose": "^4.0.1",
     "redis": "^4.6.15",
     "source-map-support": "^0.5.21"
