--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "scripts": {
+    "test": "vitest"
+  },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.620.0",
     "@socket.io/redis-streams-adapter": "^0.2.2",
     "aws-sdk": "^2.1659.0",
     "dynamoose": "^4.0.1",
     "redis": "^4.6.15",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "vitest": "^2.0.4"
   }
 }
