--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
+    "test:lambda": "cd lambda && vitest run --config vitest.config.js",
+    "test:lambda:watch": "cd lambda && vitest --config vitest.config.js",
+    "test:cdk": "vitest run --config vitest.config.ts",
+    "test:cdk:watch": "vitest --config vitest.config.ts",
+    "test": "npm run test:lambda && npm run test:cdk",
     "cdk": "cdk"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "20.14.2",
+    "@types/node": "^20.14.2",
+    "@vitest/coverage-c8": "^0.33.0",
     "aws-cdk": "2.147.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.5"
+    "typescript": "~5.4.5",
+    "vitest": "^2.0.4"
   },
   "dependencies": {
     "@socket.io/redis-emitter": "^5.1.0",
