Fix: Install dependencies in lambda folder in CI/CD workflow
Fix: Install dependencies in lambda folder in CI/CD workflow

--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -25,8 +25,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies in main folder
         run: npm install
+
+      - name: Install dependencies in lambda folder
+        run: cd lambda && npm install
 
       - name: Run tests
         run: npm test
